--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ethereumjs-util": "^5.2.0",
     "express": "^4.16.3",
     "request": "^2.87.0",
-    "web3": "^1.0.0-beta.34"
+    "web3": "^1.0.0-beta.34",
+    "winston": "^3.0.0"
   }
 }
