--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node app",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Eduard",
@@ -11,13 +12,9 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
-    "cheerio": "^1.0.0-rc.2",
     "child_process": "^1.0.2",
-    "eth-lightwallet": "^3.0.1",
     "ethereumjs-tx": "^1.3.5",
-    "ethereumjs-util": "^5.2.0",
     "express": "^4.16.3",
-    "request": "^2.87.0",
     "web3": "^1.0.0-beta.34",
     "winston": "^3.0.0"
   }
